--- a/index.html
+++ b/index.html
@@ -15,15 +15,31 @@
           name="list-item"
           id="list-item"
           placeholder="dishes"
+          value=""
+          required
         />
       </div>
       <button type="submit">Submit</button>
+      <button type="reset">Reset</button>
     </form>
     <div>
       <h1>List:</h1>
     </div>
     <div>
-      <ul></ul>
+      <ul id="list"></ul>
     </div>
   </body>
+  <script>
+    const submissionHandling = document.addEventListener(
+      "submit",
+      function (event) {
+        event.preventDefault(); //Overiding automatic submission
+
+        let listItem = document.getElementById("list-item").value;
+        let newLi = document.createElement("li"); //New empty li element
+        newLi.append(listItem); //add submitted item to empty li
+        document.getElementById("list").appendChild(newLi);
+      }
+    );
+  </script>
 </html>
